--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Mi página de prueba</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
 
     <link
@@ -10,17 +12,20 @@
         rel="stylesheet"
         type="text/css" />
 
-  </head>
-  <body>
-    <h1>Mi título principal</h1>
-    <img src="images/tabien.png" alt="Mi imagen de prueba" />
 
-    <p>Este es un párrafo</p>
+  </head>
+
+
+  <body>
+    <h1>Esta es mi página.</h1>
+    <img src="images/tabien.png" alt="Imagen de testeo" />
+
+    <p>Acá quizá meta algunas cositas.</p>
 
     <ul>
-        <li>Punto 1</li>
-        <li>Punto 2</li>
-        <li>Punto 3</li>
+        <li>Podría meter una receta acá.</li>
+        <li>Y acá también.</li>
+        <li>Y también acá.</li>
     </ul>
 
     <p>Este es otro párrafo</p>
@@ -29,10 +34,7 @@
         <a href="https://google.cl">Literalmente esto envía a Google.</a>
         Bastante interesante.
     </p>
-
-    <p>Sí, este es el tutorial de Mozilla.</p>
-    <button>Cambiar de usuario</button>
-
+    
     <script src="scripts/main.js"></script>
 
   </body>
