--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <li>Y también acá.</li>
     </ul>
 
-    <p>Este es otro párrafo</p>
+    <p>Este es otro párrafo.</p>
     <p>
         Otro párrafo más, pero esto tiene otra cosa. 
         <a href="https://google.cl">Literalmente esto envía a Google.</a>
         Bastante interesante.
     </p>
-    
+
     <script src="scripts/main.js"></script>
 
   </body>
